[gd_scene load_steps=12 format=4 uid="uid://h2rklca1upen"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_y0bt1"]
[ext_resource type="Texture2D" uid="uid://cu72hytvs5ju6" path="res://assets/tilemaps/spritesheet.png" id="2_p3y8l"]
[ext_resource type="PackedScene" uid="uid://d3fpb0me7q5pn" path="res://player/player.tscn" id="3_bkflb"]
[ext_resource type="PackedScene" uid="uid://dr0siqgnrieur" path="res://ghosts/ghost.tscn" id="4_xq8e6"]
[ext_resource type="AudioStream" uid="uid://gpq3tclyvgau" path="res://assets/sounds/pacman_siren_1.wav" id="5_u5ynb"]
[ext_resource type="AudioStream" uid="uid://58rsc7aoens2" path="res://assets/sounds/pacman_power_pellet.wav" id="6_v1whp"]
[ext_resource type="AudioStream" uid="uid://b272kh8eepr5t" path="res://assets/sounds/pacman_waka_waka.wav" id="7_koiec"]
[ext_resource type="PackedScene" uid="uid://bvcervny45js" path="res://systems/hud.tscn" id="8_7nsb1"]
[ext_resource type="PackedScene" uid="uid://c0ufdxs3pncqs" path="res://systems/teleporter.tscn" id="9_1dbbk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j6pki"]
texture = ExtResource("2_p3y8l")
margins = Vector2i(1, 1)
separation = Vector2i(1, 1)
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/custom_data_1 = true
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:0/0/custom_data_0 = true
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
12:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
13:3/0 = 0
13:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
6:10/0/terrain_set = 0
6:10/0/terrain = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:10/0/terrains_peering_bit/right_side = 0
6:10/0/terrains_peering_bit/bottom_side = 0
7:10/0 = 0
7:10/0/terrain_set = 0
7:10/0/terrain = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:10/0/terrains_peering_bit/right_side = 0
7:10/0/terrains_peering_bit/bottom_side = 0
7:10/0/terrains_peering_bit/left_side = 0
8:10/0 = 0
8:10/0/terrain_set = 0
8:10/0/terrain = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
8:10/0/terrains_peering_bit/bottom_side = 0
8:10/0/terrains_peering_bit/left_side = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
6:11/0/terrain_set = 0
6:11/0/terrain = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:11/0/terrains_peering_bit/right_side = 0
6:11/0/terrains_peering_bit/bottom_side = 0
6:11/0/terrains_peering_bit/top_side = 0
7:11/0 = 0
7:11/0/terrain_set = 0
7:11/0/terrain = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:11/0/terrains_peering_bit/right_side = 0
7:11/0/terrains_peering_bit/bottom_side = 0
7:11/0/terrains_peering_bit/left_side = 0
7:11/0/terrains_peering_bit/top_side = 0
8:11/0 = 0
8:11/0/terrain_set = 0
8:11/0/terrain = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
8:11/0/terrains_peering_bit/bottom_side = 0
8:11/0/terrains_peering_bit/left_side = 0
8:11/0/terrains_peering_bit/top_side = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
6:12/0/terrain_set = 0
6:12/0/terrain = 0
6:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:12/0/terrains_peering_bit/right_side = 0
6:12/0/terrains_peering_bit/top_side = 0
7:12/0 = 0
7:12/0/terrain_set = 0
7:12/0/terrain = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:12/0/terrains_peering_bit/right_side = 0
7:12/0/terrains_peering_bit/left_side = 0
7:12/0/terrains_peering_bit/top_side = 0
8:12/0 = 0
8:12/0/terrain_set = 0
8:12/0/terrain = 0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
8:12/0/terrains_peering_bit/left_side = 0
8:12/0/terrains_peering_bit/top_side = 0
9:12/0 = 0
9:12/0/terrain_set = 0
9:12/0/terrain = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
9:12/0/terrains_peering_bit/top_side = 0
10:12/0 = 0
10:12/0/terrain_set = 0
10:12/0/terrain = 0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
10:12/0/terrains_peering_bit/bottom_side = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
6:13/0/terrain_set = 0
6:13/0/terrain = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:13/0/terrains_peering_bit/bottom_side = 0
6:13/0/terrains_peering_bit/top_side = 0
7:13/0 = 0
7:13/0/terrain_set = 0
7:13/0/terrain = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:13/0/terrains_peering_bit/right_side = 0
7:13/0/terrains_peering_bit/left_side = 0
8:13/0 = 0
8:13/0/terrain_set = 0
8:13/0/terrain = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
9:13/0 = 0
9:13/0/terrain_set = 0
9:13/0/terrain = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
9:13/0/terrains_peering_bit/right_side = 0
10:13/0 = 0
10:13/0/terrain_set = 0
10:13/0/terrain = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
10:13/0/terrains_peering_bit/left_side = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
15:11/0 = 0
16:11/0 = 0
16:12/0 = 0
14:11/0 = 0
14:12/0 = 0
15:12/0 = 0

[sub_resource type="TileSet" id="TileSet_4tj55"]
tile_size = Vector2i(20, 20)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 16
physics_layer_1/collision_mask = 0
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "MapTerrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
custom_data_layer_0/name = "small_pellet"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "large_pellet"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_j6pki")

[node name="Level2" type="Node2D"]
script = ExtResource("1_y0bt1")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-20, 0)
tile_map_data = PackedByteArray("AAABAAAAAAAGAAoAAAACAAAAAAAHAA0AAAADAAAAAAAHAA0AAAAEAAAAAAAHAA0AAAAFAAAAAAAHAA0AAAAGAAAAAAAHAA0AAAAHAAAAAAAHAA0AAAAIAAAAAAAHAA0AAAAJAAAAAAAHAA0AAAAKAAAAAAAHAA0AAAALAAAAAAAHAA0AAAAMAAAAAAAHAA0AAAANAAAAAAAIAAoAAAAQAAAAAAAGAAoAAAARAAAAAAAHAA0AAAASAAAAAAAHAA0AAAATAAAAAAAHAA0AAAAUAAAAAAAHAA0AAAAVAAAAAAAHAAoAAAAWAAAAAAAHAA0AAAAXAAAAAAAHAAoAAAAYAAAAAAAHAA0AAAAZAAAAAAAHAA0AAAAaAAAAAAAHAA0AAAAbAAAAAAAHAA0AAAAcAAAAAAAIAAoAAAAcAAEAAAAGAA0AAAAcAAIAAAAGAA0AAAAcAAMAAAAGAA0AAAAcAAQAAAAGAA0AAAAcAAUAAAAGAA0AAAAcAAYAAAAGAA0AAAAcAAcAAAAGAA0AAAAcAAgAAAAGAA0AAAAcAAkAAAAGAA0AAAAcAAoAAAAGAA0AAAAcAAsAAAAGAA0AAAAcAAwAAAAGAA0AAAAcAA0AAAAGAA0AAAAcAA4AAAAIAAwAAAABAA4AAAAGAAwAAAABAA0AAAAGAA0AAAABAAwAAAAGAA0AAAABAAsAAAAGAA0AAAABAAoAAAAGAA0AAAABAAkAAAAGAA0AAAABAAgAAAAGAA0AAAABAAcAAAAGAA0AAAABAAYAAAAGAA0AAAABAAUAAAAGAA0AAAABAAQAAAAGAA0AAAABAAMAAAAGAA0AAAABAAIAAAAGAA0AAAABAAEAAAAGAA0AAAAcABAAAAAIAAoAAAABABAAAAAGAAoAAAAcAB0AAAAGAA0AAAAcABwAAAAGAA0AAAAcABsAAAAGAA0AAAAcABoAAAAGAA0AAAAcABkAAAAGAA0AAAAcABgAAAAGAA0AAAAcABcAAAAGAA0AAAAcABYAAAAGAA0AAAAcABUAAAAGAA0AAAAcABQAAAAGAA0AAAAcABMAAAAGAA0AAAAcABIAAAAGAA0AAAAcABEAAAAGAA0AAAAcAB4AAAAIAAwAAAABAB0AAAAGAA0AAAABABwAAAAGAA0AAAABABsAAAAGAA0AAAABABoAAAAGAA0AAAABABkAAAAGAA0AAAABABgAAAAGAA0AAAABABcAAAAGAA0AAAABABYAAAAGAA0AAAABABUAAAAGAA0AAAABABQAAAAGAA0AAAABABMAAAAGAA0AAAABABIAAAAGAA0AAAABABEAAAAGAA0AAAABAB4AAAAGAAwAAAALAB4AAAAHAA0AAAAKAB4AAAAHAA0AAAAJAB4AAAAHAA0AAAAIAB4AAAAHAAwAAAAHAB4AAAAHAA0AAAAGAB4AAAAHAAwAAAAFAB4AAAAHAA0AAAAEAB4AAAAHAA0AAAADAB4AAAAHAA0AAAACAB4AAAAHAA0AAAAMAB4AAAAHAA0AAAANAB4AAAAIAAwAAAAQAB4AAAAGAAwAAAARAB4AAAAHAA0AAAASAB4AAAAHAA0AAAATAB4AAAAHAA0AAAAUAB4AAAAHAA0AAAAVAB4AAAAHAA0AAAAWAB4AAAAHAA0AAAAXAB4AAAAHAA0AAAAYAB4AAAAHAA0AAAAZAB4AAAAHAA0AAAAaAB4AAAAHAA0AAAAbAB4AAAAHAA0AAAANAA0AAAAGAA0AAAANAAwAAAAGAA0AAAANAAsAAAAGAA0AAAANAAoAAAAGAA0AAAANAAkAAAAGAA0AAAANAAgAAAAGAA0AAAANAAcAAAAGAA0AAAANAAYAAAAGAA0AAAANAAUAAAAGAA0AAAANAAQAAAAGAA0AAAANAAMAAAAGAA0AAAANAAIAAAAGAA0AAAANAAEAAAAGAA0AAAAQAAEAAAAGAA0AAAAQAAIAAAAGAA0AAAAQAAMAAAAGAA0AAAAQAAQAAAAGAA0AAAAQAAUAAAAGAA0AAAAQAAYAAAAGAA0AAAAQAAcAAAAGAA0AAAAQAAgAAAAGAA0AAAAQAAkAAAAGAA0AAAAQAAoAAAAGAA0AAAAQAAsAAAAGAA0AAAAQAAwAAAAGAA0AAAAQAA0AAAAGAA0AAAAQABEAAAAGAA0AAAANABEAAAAGAA0AAAANAB0AAAAGAA0AAAANABwAAAAGAA0AAAANABsAAAAGAA0AAAANABoAAAAGAA0AAAANABkAAAAGAA0AAAANABgAAAAGAA0AAAANABcAAAAGAA0AAAANABYAAAAGAA0AAAANABUAAAAGAA0AAAANABQAAAAGAA0AAAANABMAAAAGAA0AAAANABIAAAAGAA0AAAAQABIAAAAGAA0AAAAQABMAAAAGAA0AAAAQABQAAAAGAA0AAAAQABUAAAAGAA0AAAAQABYAAAAGAA0AAAAQABcAAAAGAA0AAAAQABgAAAAGAA0AAAAQABkAAAAGAA0AAAAQABoAAAAGAA0AAAAQABsAAAAGAA0AAAAQABwAAAAGAA0AAAAQAB0AAAAGAA0AAAAGABMAAAAGAA0AAAAIABMAAAAGAA0AAAAIABQAAAAJAAwAAAAGABQAAAAJAAwAAAACAA4AAAAHAA0AAAADAA4AAAAHAA0AAAAEAA4AAAAHAA0AAAAFAA4AAAAHAA0AAAAGAA4AAAAHAA0AAAAHAA4AAAAHAA0AAAAIAA4AAAAHAA0AAAAJAA4AAAAHAA0AAAAKAA4AAAAHAA0AAAALAA4AAAAHAA0AAAAMAA4AAAAHAA0AAAANAA4AAAAIAAwAAAACABAAAAAHAA0AAAADABAAAAAHAA0AAAAEABAAAAAHAA0AAAAFABAAAAAHAA0AAAAGABAAAAAHAA0AAAAHABAAAAAHAA0AAAAIABAAAAAHAA0AAAANABAAAAAIAAoAAAAMABAAAAAHAA0AAAALABAAAAAHAA0AAAAKABAAAAAHAA0AAAAJABAAAAAHAA0AAAAKAAYAAAAHAA0AAAALAAYAAAAIAAoAAAALAAcAAAAGAA0AAAALAAgAAAAIAAwAAAAKAAgAAAAHAA0AAAAJAAgAAAAJAA0AAAAJAAYAAAAJAA0AAAAQAA4AAAAGAAwAAAARAA4AAAAHAA0AAAASAA4AAAAHAA0AAAATAA4AAAAHAA0AAAAUAA4AAAAHAA0AAAAVAA4AAAAHAA0AAAAWAA4AAAAHAA0AAAAXAA4AAAAHAA0AAAAYAA4AAAAHAA0AAAAZAA4AAAAHAA0AAAAaAA4AAAAHAA0AAAAbAA4AAAAHAA0AAAAbABAAAAAHAA0AAAAaABAAAAAHAA0AAAAZABAAAAAHAA0AAAAYABAAAAAHAA0AAAAXABAAAAAHAA0AAAAWABAAAAAHAA0AAAAVABAAAAAHAA0AAAAUABAAAAAHAA0AAAATABAAAAAHAA0AAAASABAAAAAHAA0AAAARABAAAAAHAA0AAAAQABAAAAAGAAoAAAAVAAwAAAAHAAwAAAAWAAwAAAAHAA0AAAAXAAwAAAAHAAwAAAAXAAsAAAAGAA0AAAAXAAoAAAAGAAoAAAAVAAoAAAAIAAoAAAAVAAsAAAAGAA0AAAASABYAAAAGAAoAAAASABcAAAAGAA0AAAASABgAAAAGAAwAAAATABgAAAAHAA0AAAAUABgAAAAKAA0AAAATABYAAAAHAA0AAAAUABYAAAAKAA0AAAALAAQAAAAIAAwAAAAKAAQAAAAHAAwAAAAJAAQAAAAGAAwAAAAJAAMAAAAGAAsAAAAJAAIAAAAGAAoAAAAKAAIAAAAHAAoAAAALAAIAAAAIAAoAAAALAAMAAAAIAAsAAAAKAAMAAAAHAAsAAAAJAAoAAAAGAAoAAAAJAAsAAAAGAAsAAAAJAAwAAAAGAAwAAAAKAAwAAAAHAAwAAAALAAwAAAAIAAwAAAALAAsAAAAIAAsAAAALAAoAAAAIAAoAAAAKAAoAAAAHAAoAAAAKAAsAAAAHAAsAAAAUAAwAAAAHAA0AAAATAAwAAAAHAA0AAAASAAwAAAAGAAwAAAASAAsAAAAGAA0AAAASAAoAAAAGAAoAAAATAAoAAAAHAA0AAAAUAAoAAAAHAA0AAAAYAAoAAAAHAA0AAAAZAAoAAAAHAA0AAAAaAAoAAAAIAAoAAAAaAAsAAAAGAA0AAAAaAAwAAAAIAAwAAAAZAAwAAAAHAA0AAAAYAAwAAAAHAA0AAAASAAgAAAAGAAwAAAASAAcAAAAGAA0AAAASAAYAAAAGAA0AAAASAAUAAAAGAA0AAAASAAQAAAAGAA0AAAASAAMAAAAGAA0AAAASAAIAAAAKAAwAAAATAAgAAAAHAA0AAAAUAAgAAAAHAA0AAAAVAAgAAAAKAA0AAAAXAAgAAAAJAA0AAAAYAAgAAAAHAA0AAAAZAAgAAAAHAA0AAAAaAAgAAAAIAAwAAAAaAAcAAAAGAA0AAAAaAAYAAAAGAA0AAAAaAAUAAAAGAA0AAAAaAAQAAAAGAA0AAAAaAAMAAAAGAA0AAAAaAAIAAAAKAAwAAAAUAAYAAAAGAAwAAAAVAAYAAAAHAAwAAAAVAAUAAAAHAAsAAAAVAAQAAAAHAAoAAAAUAAQAAAAGAAoAAAAUAAUAAAAGAAsAAAAXAAYAAAAHAAwAAAAXAAUAAAAHAAsAAAAXAAQAAAAHAAoAAAAYAAQAAAAIAAoAAAAYAAUAAAAIAAsAAAAYAAYAAAAIAAwAAAAUAAIAAAAJAA0AAAAYAAIAAAAKAA0AAAADAAYAAAAGAA0AAAADAAgAAAAGAA0AAAAVAAEAAAAGAA0AAAAXAAEAAAAGAA0AAAAXAAIAAAAHAAwAAAAVAAIAAAAHAAwAAAAUABQAAAAHAA0AAAATABQAAAAHAA0AAAASABQAAAAGAAwAAAASABMAAAAGAA0AAAASABIAAAAGAAoAAAATABIAAAAHAA0AAAAUABIAAAAHAA0AAAAVABIAAAAHAA0AAAAWABIAAAAIAAoAAAAWABMAAAAGAA0AAAAWABQAAAAIAAwAAAAVABQAAAAHAA0AAAASABoAAAAGAAoAAAATABoAAAAHAA0AAAAUABoAAAAHAA0AAAAVABoAAAAHAA0AAAAWABoAAAAIAAoAAAAWABsAAAAGAA0AAAAWABwAAAAIAAwAAAAVABwAAAAHAA0AAAAUABwAAAAHAA0AAAATABwAAAAHAA0AAAASABwAAAAGAAwAAAASABsAAAAGAA0AAAAYABMAAAAGAAwAAAAYABIAAAAGAAoAAAAZABIAAAAHAAoAAAAaABIAAAAIAAoAAAAaABMAAAAIAAwAAAAZABMAAAAHAAwAAAAYABsAAAAGAAoAAAAYABwAAAAGAAwAAAAZABwAAAAHAAwAAAAZABsAAAAHAAoAAAAaABsAAAAIAAoAAAAaABwAAAAIAAwAAAAGABIAAAAGAAoAAAAHABIAAAAHAA0AAAAIABIAAAAIAAoAAAAKABIAAAAGAAoAAAAKABMAAAAGAAsAAAAKABQAAAAGAAsAAAALABQAAAAIAAsAAAALABUAAAAIAAsAAAALABMAAAAIAAsAAAALABIAAAAIAAoAAAAKABUAAAAGAAsAAAALABYAAAAIAAsAAAAKABYAAAAGAAsAAAAIABYAAAAIAAoAAAAIABcAAAAIAAwAAAAKABcAAAAGAAwAAAALABcAAAAIAAwAAAAEABIAAAAIAAoAAAADABIAAAAGAAoAAAADABMAAAAGAAsAAAADABQAAAAGAAsAAAADABUAAAAGAAsAAAAEABUAAAAIAAsAAAAEABYAAAAIAAsAAAAEABcAAAAIAAwAAAAGABcAAAAGAAwAAAAGABYAAAAGAAoAAAADABcAAAAGAAwAAAADABYAAAAGAAsAAAAEABQAAAAIAAsAAAAEABMAAAAIAAsAAAAGABoAAAAGAAoAAAAGABsAAAAGAA0AAAAGABwAAAAGAA0AAAAIABwAAAAGAA0AAAAIABsAAAAGAA0AAAAIABoAAAAIAAoAAAAKABkAAAAGAAoAAAAKABoAAAAGAAsAAAAKABsAAAAGAAsAAAAKABwAAAAGAAwAAAALABwAAAAIAAwAAAALABsAAAAIAAsAAAALABoAAAAIAAsAAAALABkAAAAIAAoAAAAEABkAAAAIAAoAAAADABkAAAAGAAoAAAADABoAAAAGAAsAAAADABsAAAAGAAsAAAADABwAAAAGAAwAAAAEABwAAAAIAAwAAAAEABsAAAAIAAsAAAAEABoAAAAIAAsAAAAHABoAAAANAAMAAAAWAAIAAAANAAMAAAADAAcAAAAGAA0AAAAFAAYAAAAGAAwAAAAFAAgAAAAGAAoAAAAYABYAAAAGAA0AAAAGAB0AAAAGAA0AAAAIAB0AAAAGAA0AAAAaABYAAAAGAA0AAAAaABcAAAAGAA0AAAAaABgAAAAGAA0AAAAaABkAAAAIAAwAAAAZABkAAAAHAA0AAAAYABkAAAAGAAwAAAAYABgAAAAGAA0AAAAYABcAAAAGAA0AAAAYABUAAAAGAAoAAAAZABUAAAANAAMAAAAaABUAAAAIAAoAAAADAAUAAAAGAAoAAAAFAAUAAAAIAAoAAAADAAkAAAAGAAwAAAAFAAkAAAAIAAwAAAAEAAkAAAAHAA0AAAAEAAUAAAANAAMAAAADAAsAAAAGAAoAAAADAAwAAAAGAAwAAAAEAAwAAAAHAAwAAAAFAAwAAAAHAAwAAAAGAAwAAAAHAAwAAAAGAAsAAAAHAAoAAAAFAAsAAAAHAAoAAAAEAAsAAAAHAAoAAAAHAAsAAAAIAAoAAAAHAAwAAAAIAAwAAAADAAMAAAAGAAwAAAAEAAMAAAAHAAwAAAAFAAMAAAAHAAwAAAAGAAMAAAAHAAwAAAAHAAMAAAAIAAwAAAAHAAIAAAAIAAoAAAAGAAIAAAAHAAoAAAAFAAIAAAAHAAoAAAAEAAIAAAAHAAoAAAADAAIAAAAGAAoAAAAHAAYAAAAIAAoAAAAHAAcAAAAGAA0AAAAHAAgAAAAIAAwAAAAGAAYAAAAHAA0AAAAGAAgAAAAHAA0AAAASABkAAAAIAAAAAAARABkAAAAIAAAAAAARABgAAAAIAAAAAAARABcAAAAIAAAAAAARABYAAAAIAAAAAAARABUAAAAIAAAAAAARABQAAAAIAAAAAAARABMAAAAIAAAAAAARABIAAAAIAAAAAAARABEAAAAIAAAAAAASABEAAAAIAAAAAAATABEAAAAIAAAAAAAUABEAAAAIAAAAAAAVABEAAAAIAAAAAAAWABEAAAAIAAAAAAAXABEAAAAIAAAAAAAXABIAAAAIAAAAAAAXABMAAAAIAAAAAAAXABQAAAAIAAAAAAAXABUAAAAIAAAAAAAWABUAAAAIAAAAAAAVABUAAAAIAAAAAAAUABUAAAAIAAAAAAATABUAAAAIAAAAAAASABUAAAAIAAAAAAAVABYAAAAIAAAAAAAVABcAAAAIAAAAAAAUABcAAAAIAAAAAAATABcAAAAIAAAAAAAVABgAAAAIAAAAAAAVABkAAAAIAAAAAAAUABkAAAAIAAAAAAATABkAAAAIAAAAAAAWABkAAAAIAAAAAAAWABgAAAAIAAAAAAAWABcAAAAIAAAAAAAWABYAAAAIAAAAAAAXABYAAAAIAAAAAAAXABcAAAAIAAAAAAAXABgAAAAIAAAAAAAXABkAAAAIAAAAAAAXABoAAAAIAAAAAAAXABsAAAAIAAAAAAAXABwAAAAIAAAAAAAXAB0AAAAIAAAAAAAWAB0AAAAIAAAAAAAVAB0AAAAIAAAAAAAUAB0AAAAIAAAAAAATAB0AAAAIAAAAAAASAB0AAAAIAAAAAAARAB0AAAAIAAAAAAARABwAAAAIAAAAAAARABsAAAAIAAAAAAARABoAAAAIAAAAAAAYAB0AAAAIAAAAAAAZAB0AAAAIAAAAAAAaAB0AAAAIAAAAAAAbAB0AAAAEAAAAAAAbABwAAAAIAAAAAAAbABsAAAAIAAAAAAAbABoAAAAIAAAAAAAbABkAAAAIAAAAAAAbABgAAAAIAAAAAAAbABcAAAAIAAAAAAAbABYAAAAIAAAAAAAbABUAAAAIAAAAAAAbABQAAAAIAAAAAAAbABMAAAAIAAAAAAAbABIAAAAIAAAAAAAbABEAAAAEAAAAAAAaABEAAAAIAAAAAAAZABEAAAAIAAAAAAAYABEAAAAIAAAAAAAaABQAAAAIAAAAAAAZABQAAAAIAAAAAAAYABQAAAAIAAAAAAAaABoAAAAIAAAAAAAZABoAAAAIAAAAAAAYABoAAAAIAAAAAAAMABgAAAAIAAAAAAAMABcAAAAIAAAAAAAMABYAAAAIAAAAAAAMABUAAAAIAAAAAAAMABQAAAAIAAAAAAAMABMAAAAIAAAAAAAMABIAAAAIAAAAAAAMABEAAAAIAAAAAAALABEAAAAIAAAAAAAKABEAAAAIAAAAAAAJABEAAAAIAAAAAAAIABEAAAAIAAAAAAAHABEAAAAIAAAAAAAGABEAAAAIAAAAAAAFABEAAAAIAAAAAAAEABEAAAAIAAAAAAADABEAAAAIAAAAAAACABEAAAAIAAAAAAACABIAAAAIAAAAAAACABMAAAAIAAAAAAACABQAAAAIAAAAAAACABUAAAAIAAAAAAACABYAAAAIAAAAAAACABcAAAAIAAAAAAACABgAAAAIAAAAAAACABkAAAAIAAAAAAACABoAAAAIAAAAAAACABsAAAAIAAAAAAACABwAAAAIAAAAAAACAB0AAAAEAAAAAAADAB0AAAAIAAAAAAAEAB0AAAAIAAAAAAAFAB0AAAAIAAAAAAAFABwAAAAIAAAAAAAFABsAAAAIAAAAAAAFABoAAAAIAAAAAAAFABkAAAAIAAAAAAAFABgAAAAIAAAAAAAEABgAAAAIAAAAAAADABgAAAAIAAAAAAAGABgAAAAIAAAAAAAGABkAAAAIAAAAAAAHABkAAAAIAAAAAAAHABgAAAAIAAAAAAAHABcAAAAHAAwAAAAHABYAAAAHAAoAAAAHABQAAAAIAAAAAAAHABMAAAAIAAAAAAAFABQAAAAIAAAAAAAFABMAAAAIAAAAAAAFABIAAAAIAAAAAAAJABQAAAAIAAAAAAAJABMAAAAIAAAAAAAJABIAAAAIAAAAAAAIABgAAAAIAAAAAAAIABkAAAAIAAAAAAAJABkAAAAIAAAAAAAJABgAAAAIAAAAAAAKABgAAAAIAAAAAAALABgAAAAIAAAAAAAJABoAAAAIAAAAAAAJABsAAAAIAAAAAAAJABwAAAAIAAAAAAAJAB0AAAAIAAAAAAAKAB0AAAAIAAAAAAALAB0AAAAIAAAAAAAMAB0AAAAEAAAAAAAMABwAAAAIAAAAAAAMABsAAAAIAAAAAAAMABoAAAAIAAAAAAAMABkAAAAIAAAAAAAIAAoAAAAIAAAAAAAIAAkAAAAIAAAAAAAIAAgAAAAIAAAAAAAIAAcAAAAIAAAAAAAIAAYAAAAIAAAAAAAIAAUAAAAIAAAAAAAIAAQAAAAIAAAAAAAIAAMAAAAIAAAAAAAIAAIAAAAIAAAAAAAIAAEAAAAIAAAAAAAHAAEAAAAIAAAAAAAGAAEAAAAIAAAAAAAFAAEAAAAIAAAAAAAEAAEAAAAIAAAAAAADAAEAAAAIAAAAAAACAAEAAAAEAAAAAAACAAIAAAAIAAAAAAACAAMAAAAIAAAAAAACAAQAAAAIAAAAAAACAAUAAAAIAAAAAAACAAYAAAAIAAAAAAACAAcAAAAIAAAAAAACAAgAAAAIAAAAAAACAAkAAAAIAAAAAAACAAoAAAAIAAAAAAACAAsAAAAIAAAAAAACAAwAAAAIAAAAAAACAA0AAAAEAAAAAAADAA0AAAAIAAAAAAAEAA0AAAAIAAAAAAAFAA0AAAAIAAAAAAAGAA0AAAAIAAAAAAAHAA0AAAAIAAAAAAAIAA0AAAAIAAAAAAAIAAwAAAAIAAAAAAAIAAsAAAAIAAAAAAAJAA0AAAAIAAAAAAAKAA0AAAAIAAAAAAALAA0AAAAIAAAAAAAMAA0AAAAIAAAAAAAMAAwAAAAIAAAAAAAMAAsAAAAIAAAAAAAMAAoAAAAIAAAAAAAMAAkAAAAIAAAAAAAMAAgAAAAIAAAAAAAMAAcAAAAIAAAAAAAMAAYAAAAIAAAAAAAMAAUAAAAIAAAAAAAMAAQAAAAIAAAAAAAMAAMAAAAIAAAAAAAMAAIAAAAIAAAAAAAMAAEAAAAIAAAAAAALAAEAAAAIAAAAAAAKAAEAAAAIAAAAAAAJAAEAAAAIAAAAAAALAAUAAAAIAAAAAAAKAAUAAAAIAAAAAAAJAAUAAAAIAAAAAAALAAkAAAAIAAAAAAAKAAkAAAAIAAAAAAAJAAkAAAAIAAAAAAADAAoAAAAIAAAAAAAEAAoAAAAIAAAAAAAFAAoAAAAIAAAAAAAGAAoAAAAIAAAAAAAGAAkAAAAIAAAAAAAHAAkAAAAIAAAAAAAHAAoAAAAIAAAAAAADAAQAAAAIAAAAAAAEAAQAAAAIAAAAAAAFAAQAAAAIAAAAAAAGAAQAAAAIAAAAAAAGAAUAAAAIAAAAAAAHAAUAAAAIAAAAAAAHAAQAAAAIAAAAAAAJAAcAAAAIAAAAAAAKAAcAAAAIAAAAAAAWAAgAAAAIAAAAAAAWAAcAAAAIAAAAAAAWAAYAAAAHAAwAAAAWAAUAAAAHAAsAAAAWAAQAAAAHAAoAAAAWAAMAAAAIAAAAAAAVAAMAAAAIAAAAAAAUAAMAAAAIAAAAAAATAAMAAAAIAAAAAAATAAIAAAAIAAAAAAATAAEAAAAIAAAAAAASAAEAAAAIAAAAAAARAAEAAAAEAAAAAAARAAIAAAAIAAAAAAARAAMAAAAIAAAAAAARAAQAAAAIAAAAAAARAAUAAAAIAAAAAAARAAYAAAAIAAAAAAARAAcAAAAIAAAAAAARAAgAAAAIAAAAAAARAAkAAAAIAAAAAAARAAoAAAAIAAAAAAARAAsAAAAIAAAAAAARAAwAAAAIAAAAAAARAA0AAAAIAAAAAAASAA0AAAAIAAAAAAATAA0AAAAIAAAAAAAUAA0AAAAIAAAAAAAVAA0AAAAIAAAAAAAWAA0AAAAIAAAAAAAXAA0AAAAIAAAAAAAYAA0AAAAIAAAAAAAZAA0AAAAIAAAAAAAaAA0AAAAIAAAAAAAbAA0AAAAIAAAAAAAbAAwAAAAIAAAAAAAbAAsAAAAIAAAAAAAbAAoAAAAIAAAAAAAbAAkAAAAIAAAAAAAbAAgAAAAIAAAAAAAbAAcAAAAIAAAAAAAbAAYAAAAIAAAAAAAbAAUAAAAIAAAAAAAbAAQAAAAIAAAAAAAbAAMAAAAIAAAAAAAbAAIAAAAIAAAAAAAbAAEAAAAEAAAAAAAaAAEAAAAIAAAAAAAZAAEAAAAIAAAAAAAYAAEAAAAIAAAAAAAZAAIAAAAIAAAAAAAZAAMAAAAIAAAAAAAYAAMAAAAIAAAAAAAXAAMAAAAIAAAAAAAZAAQAAAAIAAAAAAAZAAUAAAAIAAAAAAAZAAYAAAAIAAAAAAAZAAcAAAAIAAAAAAAYAAcAAAAIAAAAAAAXAAcAAAAIAAAAAAAaAAkAAAAIAAAAAAAZAAkAAAAIAAAAAAAYAAkAAAAIAAAAAAAXAAkAAAAIAAAAAAAWAAkAAAAIAAAAAAAVAAkAAAAIAAAAAAAUAAkAAAAIAAAAAAATAAkAAAAIAAAAAAASAAkAAAAIAAAAAAAWAAoAAAAIAAAAAAAWAAsAAAAIAAAAAAAUAAEAAAAIAAAAAAATAAQAAAAIAAAAAAATAAUAAAAIAAAAAAATAAYAAAAIAAAAAAATAAcAAAAIAAAAAAAUAAcAAAAIAAAAAAAVAAcAAAAIAAAAAAAFABcAAAAIAAAAAAAJABcAAAAIAAAAAAAJABYAAAAIAAAAAAAFABYAAAAIAAAAAAA=")
tile_set = SubResource("TileSet_4tj55")

[node name="Player" parent="." instance=ExtResource("3_bkflb")]
position = Vector2(130, 430)

[node name="Ghost" parent="." instance=ExtResource("4_xq8e6")]
position = Vector2(70, 150)

[node name="Ghost2" parent="." instance=ExtResource("4_xq8e6")]
position = Vector2(130, 550)
type = 1
release_time = 8

[node name="Ghost3" parent="." instance=ExtResource("4_xq8e6")]
position = Vector2(430, 30)
type = 2
release_time = 12

[node name="Ghost4" parent="." instance=ExtResource("4_xq8e6")]
position = Vector2(490, 470)
type = 3
release_time = 16

[node name="SirenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u5ynb")
autoplay = true

[node name="RunningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_v1whp")

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_koiec")

[node name="HUD" parent="." instance=ExtResource("8_7nsb1")]

[node name="Teleporter" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("9_1dbbk")]
position = Vector2(130, 390)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter"]
position = Vector2(40, -240)

[node name="Teleporter2" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("9_1dbbk")]
position = Vector2(190, 150)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter2"]
position = Vector2(240, 60)

[node name="Teleporter3" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("9_1dbbk")]
position = Vector2(430, 230)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter3"]
position = Vector2(-40, 240)

[node name="Teleporter4" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("9_1dbbk")]
position = Vector2(370, 470)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter4"]
position = Vector2(-240, -60)

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PowerupKillTimer" type="Timer" parent="."]
wait_time = 99.0
one_shot = true
